@startuml

' Classes '

package Static {
    class SSH {
        {static} is_ssh_installed()
        {static} run(connection : SSHConnection)
        {static} validate(connection : SSHConnection) : boolean
    }
}

package Domain {
    class SSHConnection {
        name
        key_path
        user
        server_url
        ssh_port
        fwd_local_port
        fwd_dest_ip_dns
        fwd_dest_port

        get_ssh_command()
    }

    class SSHProfile {
        user_id
        profiles : List<SSHConnection>
    }
}

package Dumper {
    class SSHProfileDumper {
        save(sshp : SSHProfile)
        load()
    }
}

class Runner {
    ssh_profile : SSHProfile
    dumper : SSHProfileDumper

    connect(connection_name)
    show_connection(connection_name)
    list()
    add(name, local_port, dest_ip_dns, dest_port, key_path, user, password, server_url, ssh_port)
    add_prompt()
    remove(connection_name)
}

' Relationships '

SSH ..> SSHConnection
SSHProfile *-- SSHConnection

Runner *-- SSHProfile
Runner ..> SSH
Runner ..> SSHProfile
Runner ..> SSHConnection
Runner ..> SSHProfileDumper

SSHProfileDumper ..> SSHProfile


@enduml